feat(endpoints): support listing
