# docs/swagger.yaml
@@ -18,6 +18,15 @@ definitions:
       transport:
         type: string
     type: object
+  sqlc.ListEndpointsRow:
+    properties:
+      context:
+        type: string
+      id:
+        type: string
+      transport:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -62,6 +71,30 @@ paths:
         "500":
           description: Internal Server Error
       summary: Delete an endpoint and its associated resources.
+      tags:
+      - endpoints
+  /endpoint/list:
+    get:
+      parameters:
+      - default: 15
+        description: Limit the amount of endpoints returned
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/sqlc.ListEndpointsRow'
+            type: array
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: List existing endpoints.
       tags:
       - endpoints
 swagger: "2.0"
